# mochada_kit

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CITATION.cff  LICENSE  README.md  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: sphinx.yaml
_sources/dev/: code_style.rst.txt  using_git.rst.txt
_sources/examples/: make_CHADA_tables_from_json_or_yaml.ipynb.txt
data/: chada_tables_SEM-EBSD.json  chada_tables_SEM-EBSD.yaml  demo_formatting.json  demo_formatting.yaml  ebsd_header.h5oina
dev/: code_style.html  contribution_credits.html  index.html  installing_a_development_environment.html  using_git.html
docs/: conf.py  index.rst  requirements.txt
docs/_static/logo/: make_mochada_kit_logo.py
docs/dev/: contribution_credits.rst  index.rst  installing_a_development_environment.rst
docs/examples/: CHADA_and_MODA_legend_all_themes.ipynb  MODA_legend_all_themes.ipynb  index.rst  json_diagram_from_hdf5_metadata.ipynb  make_workflow_diagram.ipynb  using_hyperlinks_in_workflow_diagrams.ipynb
docs/examples/python_scripts/: CHADA_and_MODA_legend_all_themes.py  CHADA_legend_all_themes.py  MODA_legend_all_themes.py  generating_mochada_themes.py  json_diagram_from_hdf5_metadata.py  make_CHADA_tables_from_json_or_yaml.py  using_hyperlinks_in_workflow_digarams.py
docs/reference/: index.rst
docs/user/: citation.rst  funding.rst  index.rst  installation.rst  setup.rst
examples/: CHADA_and_MODA_legend_all_themes.html  CHADA_and_MODA_legend_all_themes.ipynb  CHADA_legend_all_themes.html  CHADA_legend_all_themes.ipynb  MODA_legend_all_themes.html  MODA_legend_all_themes.ipynb  generating_mochada_themes.html  generating_mochada_themes.ipynb  index.html  json_diagram_from_hdf5_metadata.html  json_diagram_from_hdf5_metadata.ipynb  make_CHADA_tables_from_json.ipynb  make_CHADA_tables_from_json_or_yaml.html  make_CHADA_tables_from_json_or_yaml.ipynb  make_workflow_diagram.html  make_workflow_diagram.ipynb  using_hyperlinks_in_workflow_diagrams.html  using_hyperlinks_in_workflow_diagrams.ipynb  using_hyperlinks_in_workflow_digarams.ipynb
examples/python_scripts/: generating_mochada_themes.py  make_CHADA_tables_from_json.py  make_workflow_diagram.py
gallery/puml_code/: chada_tables_SEM-EBSD.puml  chada_tables_SEM-EBSD_from_yaml.puml  chada_tables_template_tips_all.puml  chada_tables_template_tips_data_processing.puml  chada_tables_template_tips_experiment.puml  chada_tables_template_tips_overview.puml  chada_tables_template_tips_raw_data.puml  chada_tables_template_tips_single_data_processing.puml  chada_tables_template_tips_single_experiment.puml  chada_tables_template_tips_single_overview.puml  chada_tables_template_tips_single_raw_data.puml  chada_tables_template_tips_single_user_case.puml  chada_tables_template_tips_user_case.puml  chada_workflow_SEM_EBSD_EDX_group_of_techniques.puml  chada_workflow_SEM_EBSD_EDX_nested_techniques.puml  chada_workflow_SEM_EBSD_EDX_nested_techniques_with_hyperlinks.puml  chada_workflow_SEM_EBSD_simple.puml  chada_workflow_SEM_EBSD_single_technique_group.puml  chada_workflow_nested_and_single_groups.puml  chada_workflow_nested_groups_with_notes.puml  combined_moda_chada_workflow.puml  demo_formatting.puml  hdf5_metadata_json_1_no_HL.puml  hdf5_metadata_json_2_default_HL.puml  hdf5_metadata_json_3_bespoke_HL.puml  json_SEM_metadata_with_highlights.puml  legend_chada_all_themes.puml  legend_chada_plasma_theme.puml  legend_chada_plasma_theme_with_groups.puml  legend_moda_all_themes.puml  legend_moda_and_chada_all_themes.puml
reference/: index.html
src/CHADA_kit/: __init__.py  running.py  tables.py
src/mochada_kit/: __init__.py  cli.py  config.py  hdf5_metadata_tools.py  running.py  tables.py
templates/: CHADA_TABLES_TEMPLATE.json  CHADA_TABLES_TEMPLATE_TIPS.json  chada_tables_template.yaml  chada_tables_template_tips.yaml
themes/: puml-theme-MOCHADA-CWA.puml  puml-theme-MOCHADA-CWA_A4ww.puml  puml-theme-MOCHADA-PiYG.puml  puml-theme-MOCHADA-PiYG_5.puml  puml-theme-MOCHADA-RdBu.puml  puml-theme-MOCHADA-RdBu_5.puml  puml-theme-MOCHADA-Set1.puml  puml-theme-MOCHADA-Set1_5.puml  puml-theme-MOCHADA-Set2.puml  puml-theme-MOCHADA-Set2_5.puml  puml-theme-MOCHADA-bwr.puml  puml-theme-MOCHADA-bwr_5.puml  puml-theme-MOCHADA-cividis.puml  puml-theme-MOCHADA-cividis_5.puml  puml-theme-MOCHADA-coolwarm.puml  puml-theme-MOCHADA-coolwarm_5.puml  puml-theme-MOCHADA-jet.puml  puml-theme-MOCHADA-jet_5.puml  puml-theme-MOCHADA-plasma.puml  puml-theme-MOCHADA-plasma_5.puml  puml-theme-MOCHADA-plasma_A4w.puml  puml-theme-MOCHADA-plasma_wide.puml  puml-theme-MOCHADA-rainbow.puml  puml-theme-MOCHADA-rainbow_5.puml  puml-theme-MOCHADA-seismic.puml  puml-theme-MOCHADA-seismic_5.puml  puml-theme-MOCHADA-viridis.puml  puml-theme-MOCHADA-viridis_5.puml
user/: citation.html  funding.html  index.html  installation.html  setup.html
