[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mochada_kit"
description = "Python code for generating MODA (MOdelling DAta) and CHADA (CHAracterisation DAta) workflow diagrams and tables using plantuml, with machine-readable, enhanced design based on bespoke themes."
authors = [
    {name = "Thomas G. Woodcock"},
]
maintainers = [{name = "Thomas G. Woodcock"},]
license = {file = "LICENSE"}

classifiers=[
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Development Status :: 3 - Alpha',
    'Environment :: X11 Applications :: Qt',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX',
    'Operating System :: Microsoft :: Windows',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Visualization',
]
keywords = ["research", "data", "management", "visualization", "plantuml", "uml", "CHADA", "MODA"]
requires-python = ">=3.6"
dependencies = [
]
dynamic = ["version"]

[project.readme]
'file' = "README.md"
'content-type' = "text/markdown"

[project.scripts]
mochada_kit = "mochada_kit.__init__:main"

[tool.setuptools.dynamic]
version = {attr = "mochada_kit.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
