[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mochada_kit"
version = "0.1.2"
description = "Python code for generating MODA (MOdelling DAta) and CHADA (CHAracterisation DAta) workflow diagrams and tables using plantuml, with machine-readable, enhanced design based on bespoke themes."
authors = [{ name = "Thomas G. Woodcock" }]
maintainers = [{ name = "Thomas G. Woodcock" }]
license = { file = "LICENSE" }

classifiers = [
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Development Status :: 3 - Alpha',
  'Environment :: X11 Applications :: Qt',
  'Intended Audience :: End Users/Desktop',
  'Intended Audience :: Science/Research',
  'License :: OSI Approved :: MIT License',
  'Operating System :: POSIX',
  'Operating System :: Microsoft :: Windows',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Visualization',
]
keywords = [
  "research",
  "data",
  "management",
  "visualization",
  "plantuml",
  "uml",
  "CHADA",
  "MODA",
]
requires-python = ">=3.6"
dependencies = ["h5py", "pyyaml"]

[project.optional-dependencies]
doc = [
    "matplotlib",
    "nbsphinx                     >= 0.7",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx                       >= 3.0.2",
    "sphinx-codeautolink[ipython] < 0.14",
    "sphinx-copybutton            >= 0.2.5",
    "sphinx-design",
]
tests = [
    "numpydoc",
    "pandoc",
    "pytest                       >= 5.4",
    "pytest-benchmark",
    "pytest-rerunfailures",
    "pytest-xdist",
]
coverage = [
    "coverage                     >= 5.0",
    "pytest-cov                   >= 2.8.1",
]
dev = [
    "ruff",
    "pre-commit                   >= 1.16",
    "mochada_kit[doc,tests,coverage]",
]

[tool.ruff]
exclude = [
        "examples/python_scripts/*.py",
		"docs/examples/python_scripts/*.py",
		"docs/conf.py",
]

[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]
ignore = [
  # conflict with other rules
  "D203", # one-blank-line-before-class (conflicts with D204)
  "D212", # multi-line-summary-first-line (conflicts with D213)
  # conflict with formatter
  "D206", # indent-with-spaces
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  # conflict with Python 3.6 compatibility
  "UP022", # replace-stdout-stderr
  # personal preference
  "SIM108", # turnary operator instead of if else block
  "D205", # one-blank-line-required-between-summary-line-and-description
]

[tool.ruff.lint.isort]
known-local-folder = ["src"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
  "B018", # "Found useless expression. Either assign it to a variable or remove it."; false positives when using implicit __repr__ in the notebook
  "E501", # line too long
  "F811", # 'redefined-while-unused'; many false positives in notebooks because ipywidgets decorated functions are not recognised
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
docstring-code-format = true

[project.readme]
'file' = "README.md"
'content-type' = "text/markdown"

[project.scripts]
mochada_kit = "mochada_kit.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
